Update installer to allow optional addition of Minecrift launcher profile